k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hackaton
  labels:
    name: hackaton
